DFG JIT is inconsistent about fusing branches and speculating integer comparisons for branches. https://bugs.webkit.org/show_bug.cgi?id=64573

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-07-15
Reviewed by Gavin Barraclough.

This patch moves some of NonSpeculativeJIT's functionality up into the
JITCodeGenerator superclass so that it can be used from both JITs.  Now,
in cases where the speculative JIT doesn't want to speculate but still
wants to emit good code, it can reliably emit the same code sequence as
the non-speculative JIT.  This patch also extends the non-speculative
JIT's compare optimizations to include compare/branch fusing, and
extends the speculative JIT's compare optimizations to cover StrictEqual.

* dfg/DFGJITCodeGenerator.cpp:
(JSC::DFG::JITCodeGenerator::isKnownInteger):
(JSC::DFG::JITCodeGenerator::isKnownNumeric):
(JSC::DFG::JITCodeGenerator::nonSpeculativePeepholeBranch):
(JSC::DFG::JITCodeGenerator::nonSpeculativeCompare):
* dfg/DFGJITCodeGenerator.h:
(JSC::DFG::JITCodeGenerator::detectPeepHoleBranch):
* dfg/DFGNonSpeculativeJIT.cpp:
(JSC::DFG::NonSpeculativeJIT::compile):
* dfg/DFGNonSpeculativeJIT.h:
* dfg/DFGOperations.cpp:
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compare):
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT.h:
* wtf/Platform.h:

Canonical link: https://commits.webkit.org/80356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91099 268f45cc-cd09-0410-ab3c-d52691b4dbfc